# Mandelbrot_CUDA

./: CMakeLists.txt  LICENSE  Makefile  mandelbrot.cu
